--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         display:all flex;
         background-size:cover;
         background-repeat:no-repeat;
-        background-image:url(/PESSOA/MALA.jpeg);
+        background-image:url(/PESSOA\ MALA.jpeg);
             }
     </style>
 </body>
